--- a/MODULO16/grouping.html
+++ b/MODULO16/grouping.html
@@ -22,7 +22,10 @@
 </section>
 
 <article class="especial"> Um artigo
-    <aside class="especial">Um aside dentro dele</aside>
+    <aside class="especial">Um aside dentro dele
+
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt excepturi modi facere cum necessitatibus omnis vitae illum? Laboriosam quaerat tempore nihil dolores quae accusantium officia, itaque reprehenderit ipsam vero illum.
+    </aside>
 </article>
     </main>
 
