--- a/MODULO16/BOX.html
+++ b/MODULO16/BOX.html
@@ -24,6 +24,8 @@
 </head>
 <h1>Exemplo de caixa</h1>
 
+<div><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio fuga quos natus? Cum a culpa omnis corporis modi vel nisi facere non repellat labore ad blanditiis, veniam eos officiis tempora!</p></div>
+
 <body>
     
 </body>
