--- a/DESAFIOS/Desafio011/index.html
+++ b/DESAFIOS/Desafio011/index.html
@@ -10,14 +10,21 @@ body{
     background-image: url(espaco.jpg);
 }
 
-div{
-text-align: center;
-
+div > img{
+    position: absolute;
+    left:50%;
+    top:50%;
+transform: translate(-50%, -50%);
 }
+
+
+
+
+
 </style>
 
 </head>
 <body>
-    <div><img src="astronauta.png" alt="Astronauta"></div>
+    <div><img width="400px" src="astronauta.png" alt="Astronauta"></div>
 </body>
 </html>
