--- a/DESAFIOS/DESAFIO012/index.html
+++ b/DESAFIOS/DESAFIO012/index.html
@@ -77,7 +77,7 @@
         Deixe que Deus interprete.</P>
   </section>
 
-<footer><p>Site criado por <a class="afoot" href="https://github.com/gustavoguanabara" target="_blank" rel="external">Gustavo Guanabara</a> para o <a class="afoot" href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank" rel="external">curso em video</a></p></footer>
+<footer><p>Site criado por <a class="afoot" href="https://github.com/gustavoguanabara" target="_blank" rel="external">Felipe Calais</a> para o <a class="afoot" href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank" rel="external">curso em video</a></p></footer>
 
 
 </body>
