--- a/DESAFIOS/DESAFIOCAFEINAJS/carros.html
+++ b/DESAFIOS/DESAFIOCAFEINAJS/carros.html
@@ -11,7 +11,6 @@
 <body>
     <header>
     <h1>Parcelamento Veicular</h1>
-    <p>Por @calaisfelipe</p>
 </header>
 <main>
 
@@ -70,7 +69,8 @@
 
 </main>
 
-
+<footer><p>Por @calaisfelipe</p></footer>
 <script src="carros.js"></script>
+
 </body>
 </html>
