Finalização projeto redes sociais

--- a/MODULO23/paginasextras/youtube.html
+++ b/MODULO23/paginasextras/youtube.html
@@ -7,7 +7,8 @@
     <title>Youtube</title>
     <style>
 
-        *{margin:0;}
+        *{margin:0;
+        padding: 0;}
         
         img{
         
@@ -30,11 +31,17 @@
         #btn:hover{
             background-color: red;
         }
+  
+        ::-webkit-scrollbar{
+  height: 0;
+  width: 0;
+}
 
     </style>
 </head>
 <body>
     <img src="../imagens/tela-youtube.png" alt="">
+
     <div>
         <a href="https://www.youtube.com/user/cursosemvideo/playlists" target="_blank">
             <input id="btn" type="button" value="ACESSE" ></a>
