--- a/MODULO23/paginasextras/github.html
+++ b/MODULO23/paginasextras/github.html
@@ -31,6 +31,11 @@
             background-color: red;
         }
 
+        ::-webkit-scrollbar{
+         height: 0;
+         width: 0;
+         }
+
     </style>
 </head>
 <body>
