--- a/MODULO23/paginasextras/home.html
+++ b/MODULO23/paginasextras/home.html
@@ -8,10 +8,16 @@
     <style>
         *{
             margin:0;
+            padding:0;
         }
-        body{background-image: url(../imagens/tela-home.jpg);
+
+        body{
+        height: 100vh;
+        width: 100vw;    
+        background-image: url(../imagens/tela-home.jpg);
         background-repeat: no-repeat;
-    background-size: cover;}
+        background-position: top center;
+        background-size: cover;}
     
     </style>
 </head>
